--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,8 +1,10 @@
 .Burger {
     width: 100%;
     margin:auto;
-    height:250px;
-    /* overflow:scroll; */
+    height:350px;
+    overflow:scroll;
+    overflow-y:auto;
+    overflow-x:auto;
     text-align:bold;
     font-size:1.2rem;
 }
