--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -1,29 +1,38 @@
 .Input {
-    width:100%;
-    padding:10px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .Label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 8px;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 8px;
 }
 
 .InputElement {
-    outline:none;
-    margin:20px 0;
-    border: 1px solid #ccc;
-    background-color: white;
-    font:inherit;
-    padding: 6px 10px;
-    display: block;
-    width:100%;
-    box-sizing: border-box;
+  outline: none;
+  margin: 20px 0;
+  border: 1px solid #ccc;
+  background-color: white;
+  font: inherit;
+  padding: 6px 10px;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .InputElement:focus {
-    outline:none;
-    background-color: #ccc;
+  outline: none;
+  background-color: #ccc;
 }
 
+.Invalid {
+  border: 1px solid red;
+  background-color: #fda49a;
+}
+
+.ValidationError {
+  color: red;
+  margin: -15px 0 0 0;
+}
